# reinforcement_learning_wheelLegged_bot

./: README.md
bot_describefile/mjcf/wheel_leg_rb/: CMakeLists.txt  package.xml
bot_describefile/mjcf/wheel_leg_rb/config/: joint_names_wheel_leg_rb.yaml
bot_describefile/mjcf/wheel_leg_rb/launch/: display.launch  gazebo.launch
bot_describefile/mjcf/wheel_leg_rb/meshes/: left_hipR_link.STL  left_wheel_link.STL  right_hipR_link.STL  right_kneelR_link.STL
bot_describefile/mjcf/wheel_leg_rb/urdf/: wheel_leg_rb.csv  wheel_leg_rb.urdf  wheel_leg_rb.xml
bot_describefile/urdf/wheel_leg_rb/: CMakeLists.txt  package.xml
bot_describefile/urdf/wheel_leg_rb/config/: joint_names_wheel_leg_rb.yaml
bot_describefile/urdf/wheel_leg_rb/launch/: display.launch
bot_describefile/urdf/wheel_leg_rb/meshes/: base_link.STL  base_link.dae  left_hipL_link.STL  left_hipl_link.dae  left_hipr_link.dae  left_kneelL_link.STL  left_kneelR_link.STL  left_kneell_link.dae  left_kneelr_link.dae  left_wheel_link.dae  right_hipL_link.STL  right_hipl_link.dae  right_hipr_link.dae  right_kneelL_link.STL  right_kneell_link.dae  right_kneelr_link.dae  right_wheel_link.STL  right_wheel_link.dae
bot_describefile/urdf/wheel_leg_rb/urdf/: wheel_leg_rb.csv  wheel_leg_rb.urdf  wheel_leg_rb.xml
bot_describefile/usd/: rb_handle.usd
gym_envs/: __init__.py  elw_config.py  wheel_leg_rb.xml
gym_envs/wheel_leg/flat/: wheel_leg_flat_config.py
sources/cfg/: CubeAgent.yaml  wheellegged.yaml
sources/robot/: wheellegged.py
sources/tasks/: cubeAnget.py  wheelleggedtrain.py
